# CustomMouseSensitivity

./: .gitignore  .gitmodules  CMakeLists.txt  CustomMouseSensitivity.sln  CustomMouseSensitivity.vcxproj  CustomMouseSensitivity.vcxproj.filters  README.md  i_renderhook.h  logger.cpp  main.cpp  mod.cpp  notes.txt  renderhook_vulkan.cpp  renderhook_vulkan.h  script.cpp  start-msvc-env.ps1
CustomMo.d372de9b/x64/Release/: CustomMouseSensitivity.asi.recipe  CustomMouseSensitivity.ipdb
CustomMo.d372de9b/x64/Release/CustomMo.d372de9b.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  CustomMouseSensitivity.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
CustomMouseSensitivity/: CustomMouseSensitivity.ini  CustomMouseSensitivity.vcxproj  CustomMouseSensitivity.vcxproj.filters  main.cpp  script.cpp  script.h
include/: ConfigManager.h  DebugData.h  GameHook.h  GraphicsHookManager.h  IRenderHook.h  ModManager.h  RenderHookDX12.h  RenderHookVulkan.h  UIManager.h  config.h  debug_data.h  game_data.h  i_renderhook.h  logger.h  mod.h  renderhook_d3d12.h  renderhook_vulkan.h  script.h  ui.h
lib/Debug/: libMinHook.x64.lib
src/: ConfigManager.cpp  GameHook.cpp  GraphicsHookManager.cpp  ModManager.cpp  RenderHookDX12.cpp  RenderHookVulkan.cpp  UIManager.cpp  config.cpp  logger.cpp  main.cpp  mod.cpp  renderhook_vulkan.cpp  script.cpp  ui.cpp
x64/Release/: CustomMouseSensitivity.asi
